<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".counter.ResultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/result_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <TextView
                android:id="@+id/result_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pause"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/result_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pauseInfo"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_resultLevels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    android:textColor="#000000"
                    android:text="@string/btn_levels" />

                <Button
                    android:id="@+id/btn_resultExit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    android:textColor="#000000"
                    android:text="@string/btn_exit" />

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>